--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="w-full h-full flex flex-col items-center justify-center">
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
+      <p>building script is working ma duuuude🎉</p>
   </div>
 </main>
 
