➕ button, form & form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-
 <main class="max-h-screen h-screen w-screen">
-  <div class="w-full h-full flex flex-col items-center justify-center">
-      <h1>Hello, {{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
-  </div>
+	<div class="w-full h-full flex flex-col items-center justify-center gap-1">
+		<h1>Hello, {{ title }}</h1>
+		<p>Congratulations! Your app is running. 🎉</p>
+		<p>building script is working ma duuuude🎉</p>
+		<app-button />
+	</div>
 </main>
 
 <router-outlet></router-outlet>
