--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main class="max-h-screen h-screen w-screen">
-	<div class="w-full h-full flex flex-col items-center justify-center gap-1">
+<main class="h-screen max-h-screen w-screen">
+	<div class="flex h-full w-full flex-col items-center justify-center gap-1">
 		<h1>Hello, {{ title }}</h1>
 		<p>Congratulations! Your app is running. 🎉</p>
 		<p>building script is working ma duuuude🎉</p>
