--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,4 +1,4 @@
 <form class="mt-4 inline-flex gap-3 rounded-xl bg-slate-200 p-3">
-	<input type="text" class="focus-visible:outline-none" placeholder="Enter some text" />
+	<input name="textInput" type="text" class="focus-visible:outline-none" placeholder="Enter some text" />
 	<button type="button" class="form-btn">Click here</button>
 </form>
