🚧 using local API, showing list of person

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
 		<p>Congratulations! Your app is running. 🎉</p>
 		<p>building script is working ma duuuude🎉</p>
 		<app-button />
+		<ul>
+			<li *ngFor="let person of list">{{ person.name }}</li>
+		</ul>
 	</div>
 </main>
 
